<resources>
    <string name="app_name">NaturaList</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_list">List</string>
    <string name="title_notifications">Notifications</string>
    <string name="species">Specie</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="error_occurred">An error occurred</string>
    <string name="enable_GPS">To provide a more accurate position, please enable your GPS</string>
</resources>
